src/styles/components/PortfolioItem.module.css
.PortfolioItem {
  max-width: 75vw;
  margin: 10px auto;
  text-align: center;
}

.PortfolioItem p {
  text-align: left;
}

.image {
  width: 60%;
  height: auto;
  display: none;
  padding: 1rem;
}

.lightModeImage {
  display: inline-block;
}

[data-theme="dark"] .lightModeImage {
  display: none;
}

[data-theme="dark"] .darkModeImage {
  display: inline-block;
}

.PortfolioItem p {
  padding: 10px 0;
}

@media (max-width: 750px) {
  .PortfolioItem {
    max-width: 90vw; /* Example max-width */
    margin: 10px auto; /* Center align the component */
    text-align: center; /* Center align the text */
  }

  .image {
    width: 60%; /* Make the image responsive */
    height: auto; /* Maintain aspect ratio */
    display: none;
    padding: 1rem;
  }
}

